# movies-data-set

./: .gitignore  movie.py  movie_dataset.py  movies_metadata.csv:Zone.Identifier  process_movies.py  pyproject.toml  setup.py
tests/: test_movie_dataset.py
