[tool.poetry]
name = "interview test"
version = "0.1.0"
description = ""
authors = ["kaskous <koussay.benhfaidh@esprit.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
